# Gossip-Glomers-Jepsen-Challenges

./: .gitignore  README.md
challenge-1/: Cargo.toml  readme.md
challenge-1/src/: main.rs
challenge-1/store/: current
challenge-1/store/echo/: latest
challenge-1/store/echo/20230409T115421.251+0530/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
challenge-1/store/echo/20230409T115421.251+0530/net-journal/: 0.fressian  1.fressian  10.fressian  11.fressian  12.fressian  13.fressian  14.fressian  15.fressian  16.fressian  17.fressian  18.fressian  19.fressian  2.fressian  3.fressian  4.fressian  5.fressian  6.fressian  7.fressian  8.fressian  9.fressian
challenge-1/store/echo/20230409T115609.795+0530/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
challenge-1/store/echo/20230409T115609.795+0530/net-journal/: 0.fressian  1.fressian  10.fressian  11.fressian  12.fressian  (+15 more)
challenge-2/: Cargo.toml  readme.md
challenge-2-go/: challenge-2  go.mod  go.sum  main.go  readme.md
challenge-2/src/: main.rs
challenge-3/: Cargo.toml
challenge-3-go/: challenge3  go.mod  go.sum
challenge-3/src/: main.rs
challenge-3abcd-go/: challenge-3  go.mod  main.go  readme.md
challenge-3e-go/: main.go  readme.md
challenge-4-go/: challenge-4  go.mod  main.go  readme.md
challenge-5a-go/: challenge-5  go.sum  main.go  readme.md
challenge-5b-go/: go.mod  main.go  readme.md
challenge-5c-go/: main.go  readme.md
challenge-6a-go/: go.mod  main.go  readme.md
challenge-6b-go/: main.go  readme.md
challenge-6c-go/: main.go  readme.md
