[package]
name = "challenge-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
async-maelstrom = "0.1.2"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
uuid = {version = "1.3.1",features = ["v4"]}
